--- a/opengl_first.vcxproj.filters
+++ b/opengl_first.vcxproj.filters
@@ -21,10 +21,22 @@
     <ClCompile Include="glad.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Shader0.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="fullScreenOp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="core.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
     <ClInclude Include="fullScreenOp.h">
-      <Filter>源文件</Filter>
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
