--- a/opengl_first.vcxproj
+++ b/opengl_first.vcxproj
@@ -154,6 +154,10 @@
     <ClInclude Include="core.h" />
     <ClInclude Include="fullScreenOp.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="stb_image.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="iron.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
