--- a/opengl_first.vcxproj.filters
+++ b/opengl_first.vcxproj.filters
@@ -38,5 +38,13 @@
     <ClInclude Include="fullScreenOp.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="iron.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
